# ChangeLog for dev-util/gtk-doc
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc/ChangeLog,v 1.92 2008/04/08 17:22:23 remi Exp $

  08 Apr 2008; Rémi Cardona <remi@gentoo.org> gtk-doc-1.10-r1.ebuild:
  allow deps on gtk-doc-am to be revbumps (fixes bug #216910)

*gtk-doc-1.10-r1 (24 Mar 2008)

  24 Mar 2008; Daniel Gryniewicz <dang@gentoo.org>
  +files/gtk-doc-1.10-no-m4.patch, gtk-doc-1.8-r2.ebuild,
  -gtk-doc-1.10.ebuild, +gtk-doc-1.10-r1.ebuild:
  Split gtk-doc.m4 out into dev-util/gtk-doc-am so that packages needing it
  to run automake can depend on just that.

*gtk-doc-1.10 (19 Mar 2008)

  19 Mar 2008; Mart Raudsepp <leio@gentoo.org> +gtk-doc-1.10.ebuild:
  Version bump.

  09 Mar 2008; Mart Raudsepp <leio@gentoo.org> -files/60gtk-doc-gentoo.el,
  -files/gtk-doc-1.6-no_dupe_ids.patch, -gtk-doc-1.4-r1.ebuild,
  -gtk-doc-1.6-r1.ebuild, -gtk-doc-1.7.ebuild, -gtk-doc-1.8.ebuild:
  Remove old versions

  06 Nov 2007; Joe Peterson <lavajoe@gentoo.org> gtk-doc-1.8-r2.ebuild:
  Add ~x86-fbsd keyword (bug #197349)

*gtk-doc-1.8-r2 (10 Aug 2007)

  10 Aug 2007; Ulrich Mueller <ulm@gentoo.org> -gtk-doc-1.8-r1.ebuild,
  +gtk-doc-1.8-r2.ebuild:
  Revision bump, bug #187224.

  01 Aug 2007; Ulrich Mueller <ulm@gentoo.org> files/61gtk-doc-gentoo.el:
  Fix Emacs site-init file; it was gzipped. Bug #187224.

*gtk-doc-1.8-r1 (30 Jul 2007)

  30 Jul 2007; Daniel Gryniewicz <dang@gentoo.org>
  +files/gtk-doc-1.8-emacs-keybindings.patch, +files/61gtk-doc-gentoo.el,
  +gtk-doc-1.8-r1.ebuild:
  Bump to 1.8-r1
  	Cleanups for emacs site files; bug #184588

  02 Jun 2007; Brent Baude <ranger@gentoo.org> gtk-doc-1.8.ebuild:
  Marking gtk-doc-1.8 ppc stable for bug #171107

  31 May 2007; Jeroen Roovers <jer@gentoo.org> gtk-doc-1.8.ebuild:
  Stable for HPPA (bug #171107).

  31 May 2007; Daniel Gryniewicz <dang@gentoo.org> gtk-doc-1.8.ebuild:
  Marked stable on amd64 for bug #171107
